Adjust navbar position to fix about section covering

--- a/assets/css/templatemo-softy-pinko.css
+++ b/assets/css/templatemo-softy-pinko.css
@@ -387,7 +387,7 @@ header
 */
 .header-area {
   position: fixed;
-  bottom: 30px;
+  bottom: -5px;
   left: 0px;
   right: 0px;
   z-index: 100;
